--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
 name = "near-doc"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Luis Mastrangelo <luismastrangelo@gmail.com>"]
 edition = "2018"
+repository = "https://github.com/acuarica/near-doc"
+homepage = "https://github.com/acuarica/near-doc"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
