--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,18 @@
 [package]
-name = "near-doc"
-version = "0.1.1"
+name = "near-syn"
+version = "0.2.0"
 authors = ["Luis Mastrangelo <luismastrangelo@gmail.com>"]
 edition = "2018"
-repository = "https://github.com/acuarica/near-doc"
-homepage = "https://github.com/acuarica/near-doc"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+repository = "https://github.com/acuarica/near-syn"
+homepage = "https://github.com/acuarica/near-syn"
 
 [dependencies]
 syn = {version = "1.0.14", features = ["full", "fold", "visit", "extra-traits", "printing"] }
 quote = "1.0"
 proc-macro2 = "1.0"
-clap = "2.32"
 chrono = "0.4"
+clap = "3.0.0-beta.2"
+
+[dev-dependencies]
+assert_cmd = "1.0.3"
+tempfile = "3.2.0"
