--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,8 @@ categories = ["command-line-utilities", "template-engine", "wasm"]
 repository = "https://github.com/acuarica/near-syn"
 homepage = "https://github.com/acuarica/near-syn"
 description = """
-`near-syn` is a library and command line utilities to
-make contract development for the NEAR platform easier.
-
-The `near-syn` package contains two command line utilities:
-
-- `near-ts` generates TypeScript bindings from Rust source files.
-- `near-doc` generates Markdown documentation from Rust source files.
+Library and command line utilities to make contract development for the NEAR platform easier.
+This package contains two command line utilities: near-ts to generate TypeScript bindings and near-doc to generates Markdown docs.
 """
 
 [dependencies]
