--- a/.github/workflows/near-syn.yml
+++ b/.github/workflows/near-syn.yml
@@ -20,9 +20,10 @@ jobs:
     - uses: actions/cache@v2
       with:
         path: |
-          ~/.cargo/registry
+          ~/.cargo/registry/index
+          ~/.cargo/registry/cache
           target
-        key: ${{ runner.os }}-cargo-${{ hashFiles('Cargo.lock') }}
+        key: ${{ runner.os }}-cargo-build-${{ hashFiles('Cargo.lock') }}
     - run: cargo build --release
 
   test:
@@ -32,7 +33,8 @@ jobs:
     - uses: actions/cache@v2
       with:
         path: |
-          ~/.cargo/registry
+          ~/.cargo/registry/index
+          ~/.cargo/registry/cache
           target
-        key: ${{ runner.os }}-cargo-${{ hashFiles('Cargo.lock') }}
+        key: ${{ runner.os }}-cargo-test-${{ hashFiles('Cargo.lock') }}
     - run: cargo test
